--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       $temp.val($(element).text()).select();
       document.execCommand("copy");
       $temp.remove();
-      document.getElementById('copybutton').innerText = "Copyed!"
+      document.getElementById('copybutton').innerText = "Copied!"
       setTimeout(function(){
         document.getElementById('copybutton').innerText = "Copy"
       }, 3000);
